# app/Http/Requests/RegisterRequest.php
@@ -1,32 +1,0 @@
-<?php
-
-namespace App\Http\Requests;
-
-use Behamin\BResources\Requests\BasicRequest;
-
-class RegisterRequest extends BasicRequest
-{
-    /**
-     * Determine if the user is authorized to make this request.
-     *
-     * @return bool
-     */
-    public function authorize()
-    {
-        return true;
-    }
-
-    /**
-     * Get the validation rules that apply to the request.
-     *
-     * @return array
-     */
-    public function rules()
-    {
-        return [
-            'name' => 'required|string|max:255',
-            'email' => 'required|string|email|unique:users,email',
-            'password' => 'required|string|min:6|confirmed'
-        ];
-    }
-}
